<?xml version="1.0"?>
<package format="2">
  <name>rosserial_nested_array</name>
  <version>0.0.0</version>
  <description>The rosserial_nested_array package</description>

  <maintainer email="sugihara@todo.todo">sugihara</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>rosserial_python</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_export_depend>rosserial_arduino</build_export_depend>
  <build_export_depend>rosserial_client</build_export_depend>
  <build_export_depend>rosserial_python</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <exec_depend>rosserial_arduino</exec_depend>
  <exec_depend>rosserial_client</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

</package>
